# bitcoin-dsl

./: .dockerignore  .gitignore  .rvmrc  Dockerfile  Gemfile  README.adoc  README.md  Rakefile.rb  compose.yml  justfile
.github/workflows/: build-image.yml  contracts-ci.yml
docs/: .rvmrc  Gemfile  _config.yml  index.adoc  index.md  justfile  reference.md  setup.md  usage.md
docs/_dev/: reference.adoc  setup.adoc
docs/_examples/: ark.adoc  ark.md  braidpool.adoc  braidpool.md  coin_swap.adoc  eltoo_onchain.adoc  lightning.adoc  silent_payments.adoc  silent_payments.md  taproot.adoc  taproot_coinbase.adoc  tweaked_keys.adoc
docs/_includes/: head_custom.html
docs/_layouts/: page.html
docs/_overview/: assertions.adoc  assertions.md  branch_executions.md  contract_branch_executions.adoc  declarative_syntax.adoc  declarative_syntax.md  node_interaction.adoc  node_interaction.md  scripting.adoc  scripting.md  transactions.md
jupyter/: kernel.json
lib/: anchor_transactions.rb  ark.rb  commands.rb  dsl.rb  fold_transactions.rb  jupyter_runner.rb  key.rb  logging.rb  miniscript.rb  multisig.rb  node.rb  run.rb  runner.rb  simple.rb
lib/ark/: setup.rb  spend_cooperatively.rb  spend_unilateral.rb
lib/contracts/: anchor_transactions.rb  branch_executions.rb  cltv.rb  coinbase_with_descriptor.rb  coinbase_with_policy.rb  conditional.rb  (+13 more)
miniscript-cli/: Cargo.toml  README.md
miniscript-cli/src/: main.rs  output.rs
notebooks/: UHPO-txs.ipynb  example.ipynb  silent-payments.ipynb  using-tweaked-keys.ipynb
spec/: descriptor_spec.rb  node_spec.rb  runner_spec.rb
(+75 files in other folders)
