[package]
name = "miniscript-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript.git", version = "11.0.0", features = ["std", "compiler"]}
